Adding latest version of Swagger definition
